# gin-blog-server/internal/model/z_base.go
@@ -9,8 +9,21 @@ import (
 // 只支持创建表、增加表中没有的字段和索引
 // 为了保护数据，并不支持改变已有的字段类型或删除未被使用的字段
 func MakeMigrate(db *gorm.DB) error {
+	// 设置表关联
+	// 用于显式地配置一个多对多关系，其中 UserAuth 和 Role 通过一个关联表 UserAuthRole 进行关联。
+	db.SetupJoinTable(&UserAuth{}, "Roles", &UserAuthRole{})
+	db.SetupJoinTable(&Role{}, "Menus", &RoleMenu{})
+	db.SetupJoinTable(&Role{}, "Resources", &RoleResource{})
+	db.SetupJoinTable(&Role{}, "Users", &UserAuthRole{})
+
 	return db.AutoMigrate(
-		&Config{},
+		&Config{}, // 网站设置
+
+		&UserAuth{},     // 用户验证
+		&Role{},         // 角色
+		&Menu{},         // 菜单
+		&Resource{},     // 资源（接口）
+		&UserAuthRole{}, // 用户-角色 关联
 	)
 }
 
